Added date conversion step to fixture function

--- a/dev/dev.ipynb
+++ b/dev/dev.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "source": [
     "from django_from_excel.management.commands.buildfrom import Converter\n",
     "\n",
@@ -11,7 +11,15 @@
     "\n",
     "\n"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Complete. Run server and view the data at http://localhost:8000/admin/\n"
+     ]
+    }
+   ],
    "metadata": {}
   }
  ],
