removed migrate, loaddata, dev_mode from Converter

--- a/dev/dev.ipynb
+++ b/dev/dev.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "from django_from_excel.management.commands.buildfrom import Converter\r\n",
     "\r\n",
-    "Converter('fleet.xlsx', 'app', overwrite=True, migrate=True, loaddata=True, dev_mode=True).convert()\r\n",
+    "Converter('fleet.xlsx', 'app', overwrite=True).convert()\r\n",
     "\r\n",
     "\r\n",
     "\r\n"
@@ -16,7 +16,12 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Complete. Run server and view the data at http://localhost:8000/admin/\n"
+      "Generated models in app\\models.py\n",
+      "Registered models in app\\admin.py\n",
+      "Created fixture in app\\fixtures\\convertedmodel.json\n",
+      "Complete.\n",
+      "Run [manage.py makemigrations], then [manage.py migrate] to commit these models to your database schema.\n",
+      "Run [manage.py loaddata convertedmodel.json] to add the data your database.\n"
      ]
     }
    ],
